--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=drivermanagement
 server.port=8082
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 
 spring.datasource.url=jdbc:mysql://localhost:3306/drivermanagementdb
 spring.datasource.username=root
