--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=drivermanagement
 server.port=8082
 
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.datasource.url=jdbc:mysql://localhost:3306/drivermanagementdb
 spring.datasource.username=root
